# ModularOSV

./: Cargo.toml  LICENSE  ModularOSV-Setting.json  README.md  inital.py  osv.db
HTML/: index.html
HTML/SimpleUI/: file_search_result.html  index.html  topic.html  uploaded.html
core/: Cargo.toml  ModularOSV-Setting.json  README.md  clippy_output.txt  osv.db
core/HTML/SimpleUI/: index.html  post_search_result.html  topic.html  uploaded.html
core/src/: error.rs  form.rs  main.rs  module.rs  setting.rs  text.rs  thread.rs
core/src/pleco/: lexer.rs  mod.rs  pleco.rs
src/: error.rs  form.rs  html.rs  main.rs  setting.rs  thread.rs  time.rs
utils/: Cargo.toml  LICENSE  readme.md
utils/src/: main.rs
utils/src/mosvps/: main.rs
utils/src/mosvrplc/: main.rs
utils/src/mosvtemplate/: main.rs
