[package]
name = "modular-osv"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tera = { version = "1.20.0", default-features = false }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.13.2", features = ["v4"]}