[package]
name = "modular-osv"
version = "0.1.3"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
chrono = "0.4.39"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tera = { version = "1.20.0", default-features = false }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.13.2", features = ["v4"]}

[profile.release]
lto = "fat"
debug = 0
codegen-units = 1
opt-level = "z"
